--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -26,7 +26,33 @@
 {% endif %}
 </div>
 
-<!-- LINKS -->
+<!-- EXPERIMENTS LINKS -->
+{% if Entity.entityData.experiments_links %}
+  <div class='box'>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedExperimentsIcon' class='d-inline'><i id='linkedExperimentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked experiments'|trans }}</h3>
+    <div class='row mt-2' id='linkedExperimentsDiv' data-save-hidden='linkedExperimentsDiv'>
+      <ul class='list-group ml-3'>
+        {% for link in Entity.entityData.experiments_links %}
+          {% set randomId = random() %}
+          <li class='list-group-item' id='parent_{{ randomId }}'>
+            <i class='fas fa-link mr-1'></i>
+            <!-- toggle body -->
+            <span data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+              <i class='fas fa-plus-circle'></i>
+            </span>
+            <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
+                {{ link.title|raw }}</a>
+            <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
+            <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+            <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+{% endif %}
+
+<!-- ITEMS LINKS -->
 {% if Entity.entityData.items_links %}
   <div class='box'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedItemsIcon' class='d-inline'><i id='linkedItemsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked items'|trans }}</h3>
@@ -53,30 +79,6 @@
   </div>
 {% endif %}
 
-{% if Entity.entityData.experiments_links %}
-  <div class='box'>
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedExperimentsIcon' class='d-inline'><i id='linkedExperimentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked experiments'|trans }}</h3>
-    <div class='row mt-2' id='linkedExperimentsDiv' data-save-hidden='linkedExperimentsDiv'>
-      <ul class='list-group ml-3'>
-        {% for link in Entity.entityData.experiments_links %}
-          {% set randomId = random() %}
-          <li class='list-group-item' id='parent_{{ randomId }}'>
-            <i class='fas fa-link mr-1'></i>
-            <!-- toggle body -->
-            <span data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
-              <i class='fas fa-plus-circle'></i>
-            </span>
-            <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
-                {{ link.title|raw }}</a>
-            <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
-            <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
-            <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-{% endif %}
 
 <!-- RELATED ITEMS/EXPERIMENTS -->
 {% if Entity.type == 'items' or Entity.type == 'experiments' %}
