--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -123,7 +123,7 @@
                             <i class='fas fa-arrows-down-to-line'></i>
                           </a>
 
-                          <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                          <a data-action='import-link-body' data-endpoint='experiments' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
                             <i class='fas fa-lg fa-file-import'></i>
                           </a>
                         {% endif %}
@@ -181,7 +181,7 @@
                           <a data-action='import-links' data-endpoint='items_links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
                             <i class='fas fa-arrows-down-to-line'></i>
                           </a>
-                          <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                          <a data-action='import-link-body' data-endpoint='items' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
                             <i class='fas fa-lg fa-file-import'></i>
                           </a>
                         {% endif %}
