--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,4 +1,4 @@
-<div class='row mt-4' id='stepsLinksDiv'>
+<div class='row mt-4'>
     <!-- STEPS -->
     <section class='col-md-6'>
       <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='stepsDivIcon' class='d-inline'><i id='stepsDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h4>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <!-- display experiments links -->
-        <div class='mt-2' data-save-hidden='linksExpDiv'>
+        <div id='linksExpDiv' class='mt-2' data-save-hidden='linksExpDiv'>
           <div id='links_exp_div_{{ Entity.id }}'>
               {% if Entity.entityData.experiments_links %}
               <ul class='list-group'>
@@ -165,7 +165,7 @@
             </div>
         </div>
         <!-- display items links -->
-        <div class='mt-2' data-save-hidden='linksDiv'>
+        <div id='linksDiv' class='mt-2' data-save-hidden='linksDiv'>
           <div id='links_div_{{ Entity.id }}'>
               {% if Entity.entityData.items_links %}
               <ul class='list-group'>
