ove overwrite code display: block fix our layout on the search page, in particular the full syntax modal

--- a/src/scss/_ove.scss
+++ b/src/scss/_ove.scss
@@ -6,6 +6,11 @@
  * @package elabftw
  */
 
+// overwrite ove umd bundle setting
+code {
+    display: inline-block;
+}
+
 .preview-mode-container {
     .bp3-button.bp3-intent-primary {
         background-color: $elabblue !important;
