--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -79,7 +79,7 @@
 
         <!-- Add a link -->
         <div class='input-group mb-2 mr-2'>
-          <input type='text' id='linkInputMultiple' data-autocomplete='links' class='form-control' placeholder='{{ 'Add a link'|trans }}' />
+          <input type='text' id='linkInputMultiple' class='form-control' placeholder='{{ 'Add a link'|trans }}' />
           <div class='input-group-append'>
             <select id='addLinkCatFilter' class='brl-none form-control'>
               <option selected value=''>{{ 'Any category'|trans }}</option>
