--- a/src/templates/filter-order-sort.html
+++ b/src/templates/filter-order-sort.html
@@ -31,6 +31,25 @@
         {% endfor %}
       </select>
 
+      <select name='extended' class='autosubmit mr-1 form-control' aria-label='Filter visibility'>
+        <option value=''>{{ 'Filter visibility'|trans }}</option>
+        {% for vis in visibilityArr %}
+        <option value='visibility:"{{ vis }}"'>
+          {{ vis|raw }}</option>
+        {% endfor %}
+      </select>
+
+      <!-- TEAMGROUP filter -->
+      {% if teamGroupsFromUser %}
+        <select name='extended' class='autosubmit mr-1 form-control' aria-label='Filter team group'>
+          <option value=''>{{ 'Filter team group'|trans }}</option>
+          {% for group in teamGroupsFromUser %}
+          <option value='group:"{{ group.name }}"'>
+            {{ group.name|raw }}</option>
+          {% endfor %}
+        </select>
+      {% endif %}
+
       <input type='hidden' name='mode' value='show' />
 
       <!-- ORDER -->
