--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -13,7 +13,11 @@
         {{ entityDate }}
           <strong>{{ 'Date'|trans }}:</strong> {{ date }}<br>
           {% if entityData.tags %}
-          <strong>{{ 'Tags'|trans }}:</strong> <em>{{ entityData.tags|replace({'|': ' '}) }}</em><br>
+            {% set tags = entityData.tags|split('|') %}
+            <strong>{{ 'Tags'|trans }}:</strong>
+            {% for tag in tags %}
+              <span class='tag'>{{ tag }}</span>
+            {% endfor %}<br>
           {% endif %}
           <strong>{{ 'Created by'|trans }}:</strong> {{ entityData.fullname }}
         </p>
@@ -128,17 +132,19 @@
   </section>
 {% endif %}
 
-<table id='infoblock' role='presentation'>
-  <tr>
-    <td class='noborder'>
-      <barcode code='{{ url|raw }}' type='QR' class='barcode' size='0.8' error='M' />
-    </td>
-    <td class='noborder'>
-      <p class='elabid'>{{ 'Unique eLabID:'|trans }} {{ entityData.elabid }}</p>
-      {% if locked %}
-        <p class='elabid'>Locked by {{ lockerName }} on {{ lockDate }}</p>
-      {% endif %}
-      <p class='elabid'>Link: <a href='{{ url|raw }}'>{{ url }}</a></p>
-    </td>
-  </tr>
-</table>
+<div id='infoblock'>
+  <table class='noborder' role='presentation'>
+    <tr>
+      <td class='noborder'>
+        <barcode code='{{ url|raw }}' type='QR' class='barcode' size='0.8' error='M' />
+      </td>
+      <td class='noborder'>
+        <p class='elabid'>{{ 'Unique eLabID:'|trans }} {{ entityData.elabid }}</p>
+        {% if locked %}
+          <p class='elabid'>Locked by {{ lockerName }} on {{ lockDate }}</p>
+        {% endif %}
+        <p class='elabid'>Link: <a href='{{ url|raw }}'>{{ url }}</a></p>
+      </td>
+    </tr>
+  </table>
+</div>
