--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -62,7 +62,7 @@
           </a>
         {% endif %}
         <!-- PIN -->
-        <a data-action='pin' data-id='{{ Entity.id }}' href='#' class='dropdown-item'>
+        <a data-action='toggle-pin' data-id='{{ Entity.id }}' href='#' class='dropdown-item'>
           <i class='fas fa-thumbtack fa-fw mr-1'></i>{{ 'Toggle pin'|trans }}
         </a>
         <!-- LOCK -->
