--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -43,7 +43,7 @@
 
 <section class='item' id='main_section' style='padding:15px;border-left: 6px solid #{{ Entity.entityData.color }}'>
   <p class='float-right d-inline'>
-    <a class='elab-tooltip ml-2' data-action='pin' href='#'>
+    <a class='elab-tooltip ml-2' data-action='toggle-pin' href='#'>
       <span>{{ 'Toggle pin'|trans }}</span>
       <i title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon' class='fas fa-thumbtack {{ Entity.Pins.isPinned ? '' : 'grayed-out' }} fa-2x'></i>
     </a>
