--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -21,25 +21,23 @@
     <!-- ORDER -->
     <div class='form-group'>
       <div class='btn-group'>
-        <button class='btn btn-secondary btn-sm dropdown-toggle' data-toggle="dropdown" aria-haspopup='true' aria-expanded='false' aria-label='Order by'>{{ 'Order by'|trans }}</button>
-        <div class='dropdown-menu'>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'cat' ? 'active' }}' data-action='append-query' data-key='order' data-value='cat' href='#'>{{ 'Category'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'id' ? 'active' }}' data-action='append-query' data-key='order' data-value='id' href='#'>{{ 'Id'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'date' ? 'active' }}' data-action='append-query' data-key='order' data-value='date' href='#'>{{ 'Date'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'lastchange' ? 'active' }}' data-action='append-query' data-key='order' data-value='lastchange' href='#'>{{ 'Last modified'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'comment' ? 'active' }}' data-action='append-query' data-key='order' data-value='comment' href='#'>{{ 'Comment'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'title' ? 'active' }}' data-action='append-query' data-key='order' data-value='title' href='#'>{{ 'Title'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'user' ? 'active' }}' data-action='append-query' data-key='order' data-value='user' href='#'>{{ 'User'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('order') == 'rating' ? 'active' }}' data-action='append-query' data-key='order' data-value='rating' href='#'>{{ 'Rating'|trans }}</a>
-        </div>
-      </div>
-
-      <div class='btn-group'>
-        <!-- SORT -->
-        <button class='btn btn-secondary btn-sm dropdown-toggle' data-toggle="dropdown" aria-haspopup='true' aria-expanded='false' aria-label={{ 'Sort'|trans }}>{{ 'Sort'|trans }}</button>
-        <div class='dropdown-menu'>
-          <a class='dropdown-item {{ App.Request.query.get('sort') == 'desc' ? 'active' }}' href='#' data-action='append-query' data-key='sort' data-value='desc'>{{ 'DESC'|trans }}</a>
-          <a class='dropdown-item {{ App.Request.query.get('sort') == 'asc' ? 'active' }}' href='#' data-action='append-query' data-key='sort' data-value='asc'>{{ 'ASC'|trans }}</a>
+        <button class='btn btn-secondary btn-sm dropdown-toggle' data-toggle="dropdown" aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Sort'|trans }}'>{{ 'Sort'|trans }}</button>
+        <div class='dropdown-menu dropdown-menu-right'>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='date-desc' href='#'>{{ 'Newest'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='date-asc' href='#'>{{ 'Oldest'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='lastchange-desc' href='#'>{{ 'Recently modified'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'asc')? 'active' }}' data-query='lastchange-asc' href='#'>{{ 'Least recently modified'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='cat-desc' href='#'>{{ 'Category'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='cat-asc' href='#'>{{ 'Category (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='id-desc' href='#'>{{ 'Highest ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='id-asc' href='#'>{{ 'Lowest ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'comment' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='comment-desc' href='#'>{{ 'Recently commented'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='title-asc' href='#'>{{ 'Title (alphabetical)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='title-desc' href='#'>{{ 'Title (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='user-asc' href='#'>{{ 'User (alphabetical)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='user-desc' href='#'>{{ 'User (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='rating-desc' href='#'>{{ 'Highest rating'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='rating-asc' href='#'>{{ 'Lowest rating'|trans }}</a>
         </div>
       </div>
     </div>
