display number of timestamp in the month on sysconfig page

--- a/src/templates/ts-config.html
+++ b/src/templates/ts-config.html
@@ -32,3 +32,4 @@
 
 <label for='ts_limit'>{{ 'Number of allowed timestamps per month (0 means no limit):'|trans }}</label>
 <input class='form-control col-md-4' data-trigger='blur' data-model='config' data-target='ts_limit' type='number' value='{{ App.Config.configArr.ts_limit }}' id='ts_limit' autocomplete='off' />
+<p class='smallgray'>{{ 'Number of timestamps over the last 30 days: %d'|trans|format(timestampLastMonth) }}</p>
